--- a/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_1_Classification_use_each_year_point.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_1_Classification_use_each_year_point.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,14 +183,16 @@
     "Invarient_sample_merge     = [i[0].merge(i[1]) for i in zip(Invarient_non_built_sample,Invarient_built_sample)]\n",
     "\n",
     "# import the Each_year points\n",
-    "\n",
-    "Each_year_non_built_sample = [ee.FeatureCollection(f'{path}/Verified_point_{year}_extract_Landsat_Fourier_Normalized_img')\n",
-    "                                for year in year_name[:5]]\n",
+    "Each_year_non_built_sample = [ee.FeatureCollection(f'{path}/Verified_point_{year}_extract_Landsat_Fourier_Normalized_img')\\\n",
+    "                                .filterMetadata('Built','equals',0) for year in year_name[:5]]\n",
     "\n",
     "Each_year_built_sample     = [ee.FeatureCollection(f'{path}/Zone_point_{year}_extract_Landsat_Fourier_Normalized_img')\n",
     "                                for year in year_name[:5]]\n",
     "\n",
-    "Each_year_sample_merge     = [i[0].merge(i[1]) for i in zip(Each_year_non_built_sample,Each_year_built_sample)]"
+    "Each_year_sample_merge     = [i[0].merge(i[1]) for i in zip(Each_year_non_built_sample,Each_year_built_sample)]\n",
+    "\n",
+    "# import the Invarient-Zone points\n",
+    "Invarient_Zone_built_sample = [i[0].merge(i[1]) for i in zip(Invarient_built_sample,Each_year_built_sample)]"
    ]
   },
   {
@@ -209,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,8 +244,8 @@
     "    \n",
     "    classificaiton_tpye = input_variable[0]\n",
     "    year = input_variable[1]\n",
-    "    sample_pt = input_variable[3]\n",
     "    input_img = input_variable[2]\n",
+    "    sample_pt = input_variable[3]\n",
     "    input_band = input_img.bandNames().getInfo()\n",
     "\n",
     "    # Instatiate the class with a name.\n",
@@ -287,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -295,23 +297,23 @@
       "text/plain": [
        "[('Invarient',\n",
        "  '2017_2019',\n",
-       "  <ee.image.Image at 0x25bd5defa20>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x25bd5dd1160>),\n",
+       "  <ee.image.Image at 0x20a8768ac50>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x20a88d132b0>),\n",
        " ('Invarient',\n",
        "  '2014_2016',\n",
-       "  <ee.image.Image at 0x25bd48344a8>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x25bd5da05c0>),\n",
+       "  <ee.image.Image at 0x20a88d13518>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x20a88d1e128>),\n",
        " ('Invarient',\n",
        "  '2011_2013',\n",
-       "  <ee.image.Image at 0x25bd47b1240>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x25bd5dcd1d0>),\n",
+       "  <ee.image.Image at 0x20a88d1e320>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x20a88d1e358>),\n",
        " ('Invarient',\n",
        "  '2008_2010',\n",
-       "  <ee.image.Image at 0x25bd5da0160>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x25bd5da0d30>)]"
+       "  <ee.image.Image at 0x20a88ad3c88>,\n",
+       "  <ee.featurecollection.FeatureCollection at 0x20a88d31da0>)]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +351,7 @@
     "    \n",
     "    task = ee.batch.Export.image.toAsset(   image        = img,\n",
     "                                            description  = export_name,\n",
-    "                                            assetId      = f'{asset_path}/export_name',\n",
+    "                                            assetId      = f'{asset_path}/{export_name}',\n",
     "                                            region       = North_China_Plain.geometry().bounds(),\n",
     "                                            scale        = 30,\n",
     "                                            maxPixels    = int(1e13))\n",
@@ -370,14 +372,224 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_input_sample_img = "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Invarient</td>\n",
+       "      <td>2017_2019</td>\n",
+       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
+       "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Invarient</td>\n",
+       "      <td>2014_2016</td>\n",
+       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
+       "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Invarient</td>\n",
+       "      <td>2011_2013</td>\n",
+       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
+       "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Invarient</td>\n",
+       "      <td>2008_2010</td>\n",
+       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
+       "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Invarient</td>\n",
+       "      <td>2005_2007</td>\n",
+       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
+       "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Invarient</td>\n",
+       "      <td>2002_2004</td>\n",
+       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
+       "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Invarient</td>\n",
+       "      <td>1999_2001</td>\n",
+       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
+       "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Invarient</td>\n",
+       "      <td>1996_1998</td>\n",
+       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
+       "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Invarient</td>\n",
+       "      <td>1993_1995</td>\n",
+       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
+       "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Invarient</td>\n",
+       "      <td>1990_1992</td>\n",
+       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
+       "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Each_year</td>\n",
+       "      <td>2017_2019</td>\n",
+       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
+       "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Each_year</td>\n",
+       "      <td>2014_2016</td>\n",
+       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
+       "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Each_year</td>\n",
+       "      <td>2011_2013</td>\n",
+       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
+       "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Each_year</td>\n",
+       "      <td>2008_2010</td>\n",
+       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
+       "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Each_year</td>\n",
+       "      <td>2005_2007</td>\n",
+       "      <td>ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...</td>\n",
+       "      <td>ee.FeatureCollection({\\n  \"type\": \"Invocation\"...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            0          1                                                  2  \\\n",
+       "0   Invarient  2017_2019  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...   \n",
+       "1   Invarient  2014_2016  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...   \n",
+       "2   Invarient  2011_2013  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...   \n",
+       "3   Invarient  2008_2010  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...   \n",
+       "4   Invarient  2005_2007  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...   \n",
+       "5   Invarient  2002_2004  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...   \n",
+       "6   Invarient  1999_2001  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...   \n",
+       "7   Invarient  1996_1998  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...   \n",
+       "8   Invarient  1993_1995  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...   \n",
+       "9   Invarient  1990_1992  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...   \n",
+       "10  Each_year  2017_2019  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...   \n",
+       "11  Each_year  2014_2016  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...   \n",
+       "12  Each_year  2011_2013  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...   \n",
+       "13  Each_year  2008_2010  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...   \n",
+       "14  Each_year  2005_2007  ee.Image({\\n  \"type\": \"Invocation\",\\n  \"argume...   \n",
+       "\n",
+       "                                                    3  \n",
+       "0   ee.FeatureCollection({\\n  \"type\": \"Invocation\"...  \n",
+       "1   ee.FeatureCollection({\\n  \"type\": \"Invocation\"...  \n",
+       "2   ee.FeatureCollection({\\n  \"type\": \"Invocation\"...  \n",
+       "3   ee.FeatureCollection({\\n  \"type\": \"Invocation\"...  \n",
+       "4   ee.FeatureCollection({\\n  \"type\": \"Invocation\"...  \n",
+       "5   ee.FeatureCollection({\\n  \"type\": \"Invocation\"...  \n",
+       "6   ee.FeatureCollection({\\n  \"type\": \"Invocation\"...  \n",
+       "7   ee.FeatureCollection({\\n  \"type\": \"Invocation\"...  \n",
+       "8   ee.FeatureCollection({\\n  \"type\": \"Invocation\"...  \n",
+       "9   ee.FeatureCollection({\\n  \"type\": \"Invocation\"...  \n",
+       "10  ee.FeatureCollection({\\n  \"type\": \"Invocation\"...  \n",
+       "11  ee.FeatureCollection({\\n  \"type\": \"Invocation\"...  \n",
+       "12  ee.FeatureCollection({\\n  \"type\": \"Invocation\"...  \n",
+       "13  ee.FeatureCollection({\\n  \"type\": \"Invocation\"...  \n",
+       "14  ee.FeatureCollection({\\n  \"type\": \"Invocation\"...  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(Classificatioin_result)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4804ba599f2b441ea5e2c9b050ec9864",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[40, -100], controls=(ZoomControl(options=['position', 'zoom_in_text', 'zoom_in_title', 'zoom_out_t…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Map = geemap.Map()\n",
+    "Map.addLayer(Classificatioin_result[9][2],{'min':0,'max':1}, 'Invarient 2017-2019')\n",
+    "#Map.addLayer(Classificatioin_result[11][2],{'min':0,'max':1},'Each year 2017-2019')\n",
+    "Map"
+   ]
   },
   {
    "cell_type": "code",
