Something wrong with sample points

--- a/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_1_Classification_use_each_year_point.ipynb
+++ b/Process_2_GEE_Python_Classification/Sub_Process_4_Classification_on_img/Step_1_Classification_use_each_year_point.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        " '1990_1992']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
     "                                                                       for year in year_name],\n",
     "                                                      Invarient_built_sample)]\n",
     "# limit the Zone_invarient_built point to 8000\n",
-    "Zone_invarient_built_limit = [i.randomColumn('x').limit(8000,'x') for i in Zone_invarient_built]\n",
+    "Zone_invarient_built_limit = [i for i in Zone_invarient_built]\n",
     "Zone_Invarient_merge = [i[0].merge(i[1]) for i in zip(Invarient_non_built_sample,Zone_invarient_built_limit)]"
    ]
   },
@@ -209,7 +209,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    ".randomColumn('x').limit(8000,'x')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -220,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,37 +316,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Invarient',\n",
-       "  '2005_2007',\n",
-       "  <ee.image.Image at 0x7fed1bbaea20>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x7fed1bbae860>),\n",
-       " ('Invarient',\n",
-       "  '2002_2004',\n",
-       "  <ee.image.Image at 0x7fed1bba7668>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x7fed1ba420f0>),\n",
-       " ('Invarient',\n",
-       "  '1999_2001',\n",
-       "  <ee.image.Image at 0x7fed1ba4e208>,\n",
-       "  <ee.featurecollection.FeatureCollection at 0x7fed1ba4e630>)]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Classificatioin_result[4:7]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -389,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -684,7 +655,7 @@
        "24  ee.FeatureCollection({\\n  \"type\": \"Invocation\"...  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,13 +667,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b3b10bca686d4250ae71091048b50e0a",
+       "model_id": "609adaf9f2c64476a3fb8fb08c35d222",
        "version_major": 2,
        "version_minor": 0
       },
@@ -716,9 +687,11 @@
    ],
    "source": [
     "Map = geemap.Map()\n",
-    "Map.addLayer(Classificatioin_result[0][2],{'min':0,'max':1}, 'Invarient 2017-2019')\n",
-    "Map.addLayer(Classificatioin_result[10][2],{'min':0,'max':1},'Each_year 2017-2019')\n",
-    "Map.addLayer(Classificatioin_result[15][2],{'min':0,'max':1},'Zone_invarient 2017-2019')\n",
+    "\n",
+    "for m in Classificatioin_result[15:]:\n",
+    "    name = f'{m[0]} {m[1]}'\n",
+    "    Map.addLayer(m[2],{'min':0,'max':1},name)\n",
+    "\n",
     "Map"
    ]
   },
@@ -816,7 +789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
